--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -18,6 +18,7 @@
     <!--------------------------
       | Your Page Content Here |
       -------------------------->
+    <app-stock-manage></app-stock-manage>
 
   </section>
   <!-- /.content -->
