--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -5,5 +5,5 @@
     Anything you want
   </div>
   <!-- Default to the left -->
-  <strong>Copyright &copy; 2016 <a href="#">Company</a>.</strong> All rights reserved.
+  <strong>Copyright &copy; 2016 <a href="#">财报分析</a>.</strong> All rights reserved.
 </footer>
