--- a/src/app/stock/stock-manage/stock-manage.component.html
+++ b/src/app/stock/stock-manage/stock-manage.component.html
@@ -18,8 +18,8 @@
         <td>{{stock.price}}</td>
         <td>{{stock.rating}}</td>
         <td>
-          <a>修改</a>
-          <a>删除</a>
+          <a class="btn btn-warning btn-xs"><span class="glyphicon glyphicon-pencil"></span>修改</a>
+          <a class="btn btn-danger btn-xs"><span class="glyphicon glyphicon-remove"></span>删除</a>
         </td>
       </tr>
     </table>
