--- a/src/app/stock/stock-manage/stock-manage.component.html
+++ b/src/app/stock/stock-manage/stock-manage.component.html
@@ -1,6 +1,14 @@
 <div class="box">
   <div class="box-header with-border">
-    <h3 class="box-title">Bordered Table</h3>
+    <a class="btn btn-success btn-sm"><span class="glyphicon glyphicon-plus"></span>创建</a>
+    <div class="box-tools">
+      <div class="input-group input-group-sm" style="width: 150px; margin-top: 6px">
+        <input type="text" name="table_search" class="form-control pull-right" placeholder="股票名称">
+        <div class="input-group-btn">
+          <button type="submit" class="btn btn-default"><i class="fa fa-search"></i></button>
+        </div>
+      </div>
+    </div>
   </div>
   <!-- /.box-header -->
   <div class="box-body">
