--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -18,9 +18,10 @@
     <!--------------------------
       | Your Page Content Here |
       -------------------------->
-    <app-stock-manage></app-stock-manage>
+    <router-outlet></router-outlet>
+    <!-- <app-stock-manage></app-stock-manage> -->
 
-  </section>
-  <!-- /.content -->
+ </section>
+ <!-- /.content -->
 </div>
 <!-- /.content-wrapper -->
