--- a/src/app/stock/stock-form/stock-form.component.html
+++ b/src/app/stock/stock-form/stock-form.component.html
@@ -26,7 +26,7 @@
       <div class="form-group">
         <label class="col-sm-2 control-label">股票星级</label>
         <div class="col-sm-10">
-          <app-stars [rating]="stock?.rating"></app-stars> <!-- stock非空才去访问rating属性 -->
+          <app-stars [rating]="stock?.rating" [readonly]="false"></app-stars> <!-- stock非空才去访问rating属性 -->
         </div>
       </div>
 
