--- a/src/app/stock/stock-form/stock-form.component.html
+++ b/src/app/stock/stock-form/stock-form.component.html
@@ -5,7 +5,7 @@
   </div>
   <!-- /.box-header -->
   <!-- form start -->
-  <form class="form-horizontal">
+  <form [formGroup]="formModel" class="form-horizontal">
     <div class="box-body">
 
       <div class="form-group">
