--- a/src/app/stock/stock-form/stock-form.component.html
+++ b/src/app/stock/stock-form/stock-form.component.html
@@ -8,12 +8,18 @@
   <form [formGroup]="formModel" class="form-horizontal">
     <div class="box-body">
 
-      <div class="form-group">
+      <div class="form-group" [class.has-error]="formModel.hasError('minlength', 'name') || formModel.hasError('required', 'name')">
         <label for="name" class="col-sm-2 control-label">股票名称</label>
         <div class="col-sm-6">
           <!-- 通过formControlName把name绑定到模型 -->
           <input formControlName="name" type="text" class="form-control" id="name" placeholder="股票名称">
         </div>
+        <span class="help-block" [class.hidden]="!formModel.hasError('required', 'name')">
+          股票名是必填項
+        </span>
+        <span class="help-block" [class.hidden]="!formModel.hasError('minlength', 'name')">
+          请至少输入3个字
+        </span>
       </div>
 
       <div class="form-group">
