--- a/src/app/stock/stock-form/stock-form.component.html
+++ b/src/app/stock/stock-form/stock-form.component.html
@@ -22,12 +22,14 @@
         </span>
       </div>
 
-      <div class="form-group">
+      <div class="form-group" [class.has-error]="formModel.hasError('required', 'price')">
         <label for="price" class="col-sm-2 control-label">股票价格</label>
-
         <div class="col-sm-6">
           <input type="number" formControlName="price" class="form-control" id="price" placeholder="股票价格">
         </div>
+        <span class="help-block" [class.hidden]="!formModel.hasError('required', 'price')">
+          股票价格是必填項
+        </span>
       </div>
 
       <div class="form-group">
@@ -45,7 +47,7 @@
         </div>
       </div>
 
-      <div class="form-group">
+      <div class="form-group" [class.has-error]="formModel.hasError('categoriesLength', 'categories')">
         <label class="col-sm-2 control-label">股票类型</label>
         <div class="col-sm-10">
           <div class="row">
@@ -59,6 +61,10 @@
             </div>
 
           </div>
+          <span class="help-block" [class.hidden]="!formModel.hasError('categoriesLength', 'categories')">
+            请至少选择一个类型
+          </span>
+
         </div>
       </div>
 
